kubernetes/apps/network/envoy-gateway/gateway/trafficpolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy
  namespace: network
spec:
  compression:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  retry:
    numRetries: 2
    retryOn:
      triggers:
        - reset-before-request
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: Gateway
  tcpKeepalive:
    idleTime: 60s
    interval: 10s
    probes: 3
  timeout:
    http:
      connectionIdleTimeout: 4s
      requestTimeout: 0s
